Fixed z-index for navbar.

--- a/client/assets/stylesheets/main.less
+++ b/client/assets/stylesheets/main.less
@@ -19,7 +19,7 @@ body {
   background-color: rgba(231, 231, 231, 0.8);
   border-color: rgba(231, 231, 231, 0.8);
   .border-radius(0);
-  z-index: 9999;
+  z-index: 100;
 }
 
 .navbar-brand img {
